package Platform.Model;
option java_package = "vip.isass.core.protobuf.im";
option java_outer_classname = "IM";

// 请求_发送文本信息给好友
message SendTextToUserC2S {
	required int32 toUserId = 1; // 好友的用户id
	required string message = 2; // 消息内容
	optional int32 opt = 3;
}

// 响应_发送文本信息给好友
message SendTextToUserS2C {
	optional bool success = 1;
    optional int32 errorCode = 2;
	optional string errorMsg = 3;
    optional string errorDetail = 4;
	optional Message data = 5;
}


message Message {
	optional int32 toUserId = 1; // 好友的用户id
	optional string message = 2; // 消息内容
}
// 请求_空
message EmptyC2S {
}