/*
 *                    GNU LESSER GENERAL PUBLIC LICENSE
 *                        Version 3, 29 June 2007
 *
 *  Copyright (C) 2007 Free Software Foundation, Inc. <http://fsf.org/>
 *  Everyone is permitted to copy and distribute verbatim copies
 *  of this license document, but changing it is not allowed.
 *
 *
 *   This version of the GNU Lesser General Public License incorporates
 * the terms and conditions of version 3 of the GNU General Public
 * License, supplemented by the additional permissions listed below.
 *
 *   0. Additional Definitions.
 *
 *   As used herein, "this License" refers to version 3 of the GNU Lesser
 * General Public License, and the "GNU GPL" refers to version 3 of the GNU
 * General Public License.
 *
 *   "The Library" refers to a covered work governed by this License,
 * other than an Application or a Combined Work as defined below.
 *
 *   An "Application" is any work that makes use of an interface provided
 * by the Library, but which is not otherwise based on the Library.
 * Defining a subclass of a class defined by the Library is deemed a mode
 * of using an interface provided by the Library.
 *
 *   A "Combined Work" is a work produced by combining or linking an
 * Application with the Library.  The particular version of the Library
 * with which the Combined Work was made is also called the "Linked
 * Version".
 *
 *   The "Minimal Corresponding Source" for a Combined Work means the
 * Corresponding Source for the Combined Work, excluding any source code
 * for portions of the Combined Work that, considered in isolation, are
 * based on the Application, and not on the Linked Version.
 *
 *   The "Corresponding Application Code" for a Combined Work means the
 * object code and/or source code for the Application, including any data
 * and utility programs needed for reproducing the Combined Work from the
 * Application, but excluding the System Libraries of the Combined Work.
 *
 *   1. Exception to Section 3 of the GNU GPL.
 *
 *   You may convey a covered work under sections 3 and 4 of this License
 * without being bound by section 3 of the GNU GPL.
 *
 *   2. Conveying Modified Versions.
 *
 *   If you modify a copy of the Library, and, in your modifications, a
 * facility refers to a function or data to be supplied by an Application
 * that uses the facility (other than as an argument passed when the
 * facility is invoked), then you may convey a copy of the modified
 * version:
 *
 *    a) under this License, provided that you make a good faith effort to
 *    ensure that, in the event an Application does not supply the
 *    function or data, the facility still operates, and performs
 *    whatever part of its purpose remains meaningful, or
 *
 *    b) under the GNU GPL, with none of the additional permissions of
 *    this License applicable to that copy.
 *
 *   3. Object Code Incorporating Material from Library Header Files.
 *
 *   The object code form of an Application may incorporate material from
 * a header file that is part of the Library.  You may convey such object
 * code under terms of your choice, provided that, if the incorporated
 * material is not limited to numerical parameters, data structure
 * layouts and accessors, or small macros, inline functions and templates
 * (ten or fewer lines in length), you do both of the following:
 *
 *    a) Give prominent notice with each copy of the object code that the
 *    Library is used in it and that the Library and its use are
 *    covered by this License.
 *
 *    b) Accompany the object code with a copy of the GNU GPL and this license
 *    document.
 *
 *   4. Combined Works.
 *
 *   You may convey a Combined Work under terms of your choice that,
 * taken together, effectively do not restrict modification of the
 * portions of the Library contained in the Combined Work and reverse
 * engineering for debugging such modifications, if you also do each of
 * the following:
 *
 *    a) Give prominent notice with each copy of the Combined Work that
 *    the Library is used in it and that the Library and its use are
 *    covered by this License.
 *
 *    b) Accompany the Combined Work with a copy of the GNU GPL and this license
 *    document.
 *
 *    c) For a Combined Work that displays copyright notices during
 *    execution, include the copyright notice for the Library among
 *    these notices, as well as a reference directing the user to the
 *    copies of the GNU GPL and this license document.
 *
 *    d) Do one of the following:
 *
 *        0) Convey the Minimal Corresponding Source under the terms of this
 *        License, and the Corresponding Application Code in a form
 *        suitable for, and under terms that permit, the user to
 *        recombine or relink the Application with a modified version of
 *        the Linked Version to produce a modified Combined Work, in the
 *        manner specified by section 6 of the GNU GPL for conveying
 *        Corresponding Source.
 *
 *        1) Use a suitable shared library mechanism for linking with the
 *        Library.  A suitable mechanism is one that (a) uses at run time
 *        a copy of the Library already present on the user's computer
 *        system, and (b) will operate properly with a modified version
 *        of the Library that is interface-compatible with the Linked
 *        Version.
 *
 *    e) Provide Installation Information, but only if you would otherwise
 *    be required to provide such information under section 6 of the
 *    GNU GPL, and only to the extent that such information is
 *    necessary to install and execute a modified version of the
 *    Combined Work produced by recombining or relinking the
 *    Application with a modified version of the Linked Version. (If
 *    you use option 4d0, the Installation Information must accompany
 *    the Minimal Corresponding Source and Corresponding Application
 *    Code. If you use option 4d1, you must provide the Installation
 *    Information in the manner specified by section 6 of the GNU GPL
 *    for conveying Corresponding Source.)
 *
 *   5. Combined Libraries.
 *
 *   You may place library facilities that are a work based on the
 * Library side by side in a single library together with other library
 * facilities that are not Applications and are not covered by this
 * License, and convey such a combined library under terms of your
 * choice, if you do both of the following:
 *
 *    a) Accompany the combined library with a copy of the same work based
 *    on the Library, uncombined with any other library facilities,
 *    conveyed under the terms of this License.
 *
 *    b) Give prominent notice with the combined library that part of it
 *    is a work based on the Library, and explaining where to find the
 *    accompanying uncombined form of the same work.
 *
 *   6. Revised Versions of the GNU Lesser General Public License.
 *
 *   The Free Software Foundation may publish revised and/or new versions
 * of the GNU Lesser General Public License from time to time. Such new
 * versions will be similar in spirit to the present version, but may
 * differ in detail to address new problems or concerns.
 *
 *   Each version is given a distinguishing version number. If the
 * Library as you received it specifies that a certain numbered version
 * of the GNU Lesser General Public License "or any later version"
 * applies to it, you have the option of following the terms and
 * conditions either of that published version or of any later version
 * published by the Free Software Foundation. If the Library as you
 * received it does not specify a version number of the GNU Lesser
 * General Public License, you may choose any version of the GNU Lesser
 * General Public License ever published by the Free Software Foundation.
 *
 *   If the Library as you received it specifies that a proxy can decide
 * whether future versions of the GNU Lesser General Public License shall
 * apply, that proxy's public statement of acceptance of any version is
 * permanent authorization for you to choose that version for the
 * Library.
 *
 */

package vip.isass.core.net.request.handler;

import vip.isass.core.net.config.NetProperties;
import vip.isass.core.net.packet.Packet;
import vip.isass.core.net.packet.impl.HttpContent;
import vip.isass.core.net.request.Request;
import vip.isass.core.protobuf.Base;
import vip.isass.core.protobuf.im.IM;
import vip.isass.core.serialization.SerializeMode;
import vip.isass.core.serialization.impl.protobuf2.ProtobufMethodCache;
import vip.isass.core.support.UriRequestMapping;
import vip.isass.core.support.JsonUtil;
import cn.hutool.core.collection.CollUtil;
import cn.hutool.core.map.MapUtil;
import cn.hutool.core.util.StrUtil;
import com.google.protobuf.ByteString;
import com.google.protobuf.GeneratedMessage;
import com.googlecode.protobuf.format.JsonFormat;
import lombok.SneakyThrows;
import lombok.extern.slf4j.Slf4j;
import org.springframework.beans.factory.annotation.Value;
import org.springframework.boot.autoconfigure.condition.ConditionalOnMissingBean;
import org.springframework.context.annotation.Bean;
import org.springframework.context.annotation.Primary;
import org.springframework.http.*;
import org.springframework.http.client.SimpleClientHttpRequestFactory;
import org.springframework.web.client.RestTemplate;

import javax.annotation.Resource;
import java.lang.reflect.Method;
import java.util.List;
import java.util.Map;
import java.util.stream.Collectors;

import static java.nio.charset.StandardCharsets.UTF_8;

/**
 * @author Rain
 */
@Slf4j
@ConditionalOnMissingBean(RequestHandler.class)
public class DefaultHttpRequestHandler implements RequestHandler {

    @Resource
    private NetProperties netProperties;

    @Primary
    @Bean
    public RestTemplate restTemplate() {
        SimpleClientHttpRequestFactory requestFactory = new SimpleClientHttpRequestFactory();
        requestFactory.setConnectTimeout(netProperties.getRestTemplateTimeOut());
        requestFactory.setReadTimeout(netProperties.getRestTemplateTimeOut());
        return new RestTemplate(requestFactory);
    }

    @Resource
    private RestTemplate restTemplate;

    @Value("${server.gateway.http.serverName}")
    private String httpGatewayServerName;

    @Override
    public void handle(Request request) {
        Packet packet = request.getPacket();
        Packet.Type type = Packet.Type.parseByCode(packet.getType());
        switch (type) {
            case HTTP_REQUEST:
                handelProtocolExchangeHttp(request);
                break;
            case HEART_BEAT:
            default:
                throw new IllegalArgumentException(StrUtil.format("未支持的包类型：[{}]", type));
        }
    }

    @SneakyThrows
    private void handelProtocolExchangeHttp(Request request) {
        Packet packet = request.getPacket();
        Object content = packet.getContent();

        // 反序列化HttpContent
        HttpContent httpContent;
        String javaProtobufClassC2S = null;
        String javaProtobufClassS2C = null;

        SerializeMode serializeMode = SerializeMode.getByCode(packet.getSerializeMode());
        switch (serializeMode) {
            case JSON:
                if (content instanceof byte[]) {
                    String str = new String((byte[]) content, UTF_8);
                    httpContent = JsonUtil.DEFAULT_INSTANCE.readValue((byte[]) content, HttpContent.class);
                } else {
                    httpContent = JsonUtil.DEFAULT_INSTANCE.convertValue(packet.getContent(), HttpContent.class);
                }
                break;
            case PROTOBUF2:
                Base.HttpFrame httpFrame = Base.HttpFrame.parseFrom((byte[]) content);
                httpContent = new HttpContent()
                    .setUrl(httpFrame.getUrl())
                    .setHttpMethod(httpFrame.getHttpMethod())
                    .setHttpHeaders(httpFrame
                        .getHttpHeadersList()
                        .stream()
                        .collect(Collectors.toMap(Base.StringEntry::getKey, Base.StringEntry::getValue)));

                javaProtobufClassC2S = httpFrame.getJavaProtobufClassC2S();
                javaProtobufClassS2C = httpFrame.getJavaProtobufClassS2C();
                GeneratedMessage bodyPb = (GeneratedMessage) ProtobufMethodCache.PARSE_METHOD_CACHE.get(javaProtobufClassC2S).invoke(null, httpFrame.getBody());
                String bodyStr = JsonFormat.printToString(bodyPb);
                httpContent.setBody(bodyStr);
                break;
            case PROTOBUF3:
            default:
                throw new UnsupportedOperationException("未支持的序列化方式：" + serializeMode);
        }

        packet.setContent(httpContent);

        // 获取请求url
        String url = httpContent.getUrl();

        if (StrUtil.isBlank(url)) {
            log.error("请求的url字符串为空，跳过请求！");
            packet.setType(Packet.Type.ERROR.getCode());
            packet.setSerializeMode(SerializeMode.JSON.getCode());
            packet.setContent("发起的http请求的url不能空");
            request.sendResponse(packet);
            return;
        }

        ResponseEntity<String> resp = null;
        try {
            resp = httpForward(this.restTemplate, httpContent);
            setResponseUrl(resp.getHeaders(), httpContent);
            String body = resp.getBody();
            if (StrUtil.isBlank(body)) {
                body = "";
            } else if (body.length() < 2) {
                body = "\"" + body + "\"";
            } else if (!isJson(body)) {
                body = "\"" + body + "\"";
            }
            log.debug("http网关执行结果：{}", resp);

            if (serializeMode == SerializeMode.JSON) {
                httpContent.setBody(body);
                packet.setContent(httpContent);
            } else if (serializeMode == SerializeMode.PROTOBUF2) {
                Method method = ProtobufMethodCache.BUILDER_METHOD_CACHE.get(javaProtobufClassS2C);
                GeneratedMessage.Builder builder = (GeneratedMessage.Builder) method.invoke(method.getDeclaringClass());
                JsonFormat.merge(body, builder);
                httpContent.setBody(builder.build().toByteString());

                Base.HttpFrame.Builder contentBuilder = Base.HttpFrame.newBuilder()
                    .setUrl(httpContent.getUrl())
                    .setHttpMethod(httpContent.getHttpMethod())
                    .setBody((ByteString) httpContent.getBody());
                if (MapUtil.isNotEmpty(httpContent.getHttpHeaders())) {
                    httpContent.getHttpHeaders().forEach(
                        (k, v) -> contentBuilder.addHttpHeaders(Base.StringEntry.newBuilder().setKey(k).setValue(v))
                    );
                }
                packet.setContent(contentBuilder.build());
            }
        } catch (Exception e) {
            log.error(e.getMessage(), e);
            packet.setType(Packet.Type.ERROR.getCode());
            packet.setSerializeMode(SerializeMode.JSON.getCode());
            packet.setContent(e.getMessage());
        }

        // 推送结果给客户端
        request.sendResponse(packet);
    }

    public static void main(String[] args) throws JsonFormat.ParseException {
        String json = "{\"success\":true,\"errorCode\":0,\"errorMsg\":null,\"errorDetail\":null,\"data\":{\"toUserId\":111,\"message\":\"test内容\"}}";
        IM.SendTextToUserS2C.Builder builder = IM.SendTextToUserS2C.newBuilder();
        JsonFormat.merge(json, builder);
    }

    private ResponseEntity<String> httpForward(RestTemplate restTemplate, HttpContent httpContent) {
        ResponseEntity<String> resp;

        HttpHeaders headers = getHttpHeaders(httpContent);

        HttpEntity<Object> formEntity = new HttpEntity<>(httpContent.getBody(), headers);

        // 获取请求类型
        Integer httpMethod = httpContent.getHttpMethod();
        HttpContent.HttpMethodEnum httpMethodEnum = HttpContent.HttpMethodEnum.parseFromId(httpMethod);
        switch (httpMethodEnum) {
            case GET:
                resp = restTemplate.exchange(httpContent.getUrl(), HttpMethod.GET, formEntity, String.class);
                break;
            case PUT:
                resp = restTemplate.exchange(httpContent.getUrl(), HttpMethod.PUT, formEntity, String.class);
                break;
            case POST:
                resp = restTemplate.exchange(httpContent.getUrl(), HttpMethod.POST, formEntity, String.class);
                break;
            case DELETE:
                resp = restTemplate.exchange(httpContent.getUrl(), HttpMethod.DELETE, formEntity, String.class);
                break;
            case HEAD:
            case TRACE:
            case OPTIONS:
            case PATCH:
            default:
                throw new UnsupportedOperationException("不支持的HttpMethodEnum值：[+" + httpMethod + "]");
        }
        return resp;
    }

    private boolean isJson(String str) {
        if (str.startsWith("{") && str.endsWith("}")) {
            return true;
        }
        if (str.startsWith("[") && str.endsWith("]")) {
            return true;
        }
        return false;
    }

    private HttpHeaders getHttpHeaders(HttpContent httpContent) {
        HttpHeaders headers = new HttpHeaders();
        headers.setContentType(MediaType.APPLICATION_JSON_UTF8);
        headers.add(HttpHeaders.ACCEPT, MediaType.APPLICATION_JSON.toString());
        Map<String, String> httpHeaders = httpContent.getHttpHeaders();
        if (MapUtil.isNotEmpty(httpHeaders)) {
            httpHeaders.forEach(headers::add);
        }
        return headers;
    }

    /**
     * 将请求的url，转换成微服务的controller定义的requestMapping
     */
    private void setResponseUrl(HttpHeaders respHeaders, HttpContent httpContent) {
        List<String> mappings = respHeaders.get(UriRequestMapping.MAPPING_KEY);
        if (CollUtil.isEmpty(mappings)) {
            return;
        }
        String mapping = mappings.get(0);
        if (mapping == null || mapping.length() == 0) {
            return;
        }
        httpContent.setUrl(mapping);
    }

}
